css/pwa-banner.css
.pwa {
  position: fixed;
  bottom: 0px;
  left: 50%;
  transform: translateX(-50%);
  background-color: var(--orange90);
  display: flex;
  justify-content: space-between;
  gap: 70px;
  border-radius: 16px;
  padding: 16px;
}
.pwa__content {
  display: flex;
  flex-direction: column;
  gap: 8px;
}
.pwa__title {
  color: var(--w);
}
.pwa__subtitle {
  color: var(--w64);
}
.pwa__close {
  width: 24px;
  height: 24px;
}
.pwa__icon-wrapper {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  width: 62px;
  height: 70px;

  position: absolute;
  right: 45px;
  bottom: 5px;
}
@media (max-width: 320px) {
  .pwa__icon-wrapper {
    right: 25px;
  }
}
.pwa[hidden] {
  display: none;
}

.pwa-popup {
  position: fixed;
  inset: 0;
  z-index: 100;
  display: flex;
  align-items: center;
  justify-content: center;
}
.pwa-popup[hidden] {
  display: none;
}
.pwa-popup__overlay {
  position: absolute;
  inset: 0;
  backdrop-filter: blur(4px);
  background-color: rgba(0, 0, 0, 0.16);
}
.pwa-popup__content {
  position: relative;
  z-index: 1;
  background-color: var(--w);
  border-radius: 16px;
  padding: 16px;
  width: clamp(344px, calc(100% - 32px), 624px);
  display: flex;
  flex-direction: column;
  gap: 12px;
}
.pwa-popup__close {
  align-self: flex-end;
  position: absolute;
  width: 24px;
  height: 24px;
}
.pwa-popup__title {
  color: var(--b);
  padding-right: 30px;
}
.pwa-popup__subtitle {
  color: var(--b64);
}
.pwa-popup__os-toggle {
  display: flex;
  gap: 6px;
  background-color: var(--grey);
  border-radius: 100px;
  padding: 2px;
}

.os-toggle__ios,
.os-toggle__android {
  flex: 1;
  border-radius: 100px;
  color: var(--b48);
  padding: 7px 10px 9px;
}

.os-toggle__ios.active,
.os-toggle__android.active {
  background-color: var(--orange90);
  color: var(--w);
}

.pwa-popup__guide {
  border-radius: 16px;
  padding: 16px;
  background-color: var(--grey);
}

.guide__content-list {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.--vertical-align {
  display: inline-flex;
  align-items: center;
}

